<resources>
    <string name="app_name">XploreSpotLightLib</string>
    <string name="onoff">Liga/Desliga</string>
    <string name="on">Ligado</string>
    <string name="off">Desligado</string>
    <string name="hint_default">Digite algo</string>
    <string name="title_activity_xplore_lib_feature">XploreLibFeature</string>
    <string name="logout">Sair</string>
    <string name="send_message">Enviar Mensagem</string>
    <string name="change_passwd">Trocar Senha</string>
    <string name="default_user_name">Android Team</string>
    <string name="text_keep_logged">Manter Logado</string>

    <string name="open">Abrir</string>
    <string name="close">Fechar</string>
    <string name="send_email">Enivar Email</string>
    <string name="uninstall">Desinstalar App</string>
    <string name="add_facebook_account">Add Facebook</string>
    <string name="add_gmail_account">Add GMAIL</string>
    <string name="add_github_account">Add Github</string>
    <string name="add_bitbucket_account">Bitbucket Account</string>

</resources>
